--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -16,7 +16,7 @@
           <a href="#">About Us</a><br>
           <a href="#">Mission & Vision</a><br>
           <a href="#">Team</a><br>
-          <a href="#">Contact Us</a>
+          <a href="#">Contact Us</a><br>
           <a href="#">FAQs</a><br>
         </p>
       </div>
