--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body { height: 100%; scroll-behavior: smooth; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 /* Links */
@@ -327,3 +327,10 @@ a:active {
   background-color: rgba(0, 0, 0, 0) !important;
 }
 /* End of colors*/
+
+
+.sticky
+{
+  position: fixed;
+  top: 0;
+}
