--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -88,6 +88,8 @@
     border-top-right-radius: 80% 180px !important;
     position: relative;
     overflow: hidden;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
 }
 
 .reach-section-desc {
@@ -96,6 +98,28 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     padding: 30px;
+}
+
+.partners-section {
+    margin-top: 80px;
+    padding-bottom: 30px;
+    padding-left: 50px;
+    padding-right: 50px;
+    align-items: center;
+}
+
+.partner-card {
+    border-radius: 15px;
+    background-color: #fff;
+    color: #ffffff;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    text-align: center;
+}
+
+.partners-section img {
+    height: 150px;
+    border-radius: 15px;
 }
 
 @media only screen and (max-width: 600px) {
