--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -11,7 +11,7 @@
         <li><a href="#solution-section">Our Solution</a></li>
         <li><a href="#modalities">Modalities</a></li>
         <li><a href="#regions">Our Reach</a></li>
-        <li><a href="#">Partners</a></li>
+        <li><a href="#partners">Partners</a></li>
         <li><a href="#">Contact Us</a></li>
         <li></li><li></li>
         <li id="login"><a href="#" >Login</a></li>
@@ -27,7 +27,7 @@
         <li onclick="toggleMobileMenu(this)"><a href="#solution-section">Our Solution</a></li>
         <li onclick="toggleMobileMenu(this)"><a href="#modalities">Modalities</a></li>
         <li onclick="toggleMobileMenu(this)"><a href="#regions">Our Reach</a></li>
-        <li onclick="toggleMobileMenu(this)"><a href="#">Partners</a></li>
+        <li onclick="toggleMobileMenu(this)"><a href="#partners">Partners</a></li>
         <li onclick="toggleMobileMenu(this)"><a href="#">Contact Us</a></li>
         <li></li><li></li>
         <li id="login" onclick="toggleMobileMenu(this)"><a href="#" >Login</a></li>
@@ -48,7 +48,7 @@
         <li><a href="#solution-section">Our Solution</a></li>
         <li><a href="#modalities">Modalities</a></li>
         <li><a href="#regions">Our Reach</a></li>
-        <li><a href="#">Partners</a></li>
+        <li><a href="#partners">Partners</a></li>
         <li><a href="#">Contact Us</a></li>
         <li></li><li></li>
         <li id="login"><a href="#" >Login</a></li>
@@ -64,7 +64,7 @@
         <li onclick="toggleMobileMenu(this)"><a href="#solution-section">Our Solution</a></li>
         <li onclick="toggleMobileMenu(this)"><a href="#modalities">Modalities</a></li>
         <li onclick="toggleMobileMenu(this)"><a href="#regions">Our Reach</a></li>
-        <li onclick="toggleMobileMenu(this)"><a href="#">Partners</a></li>
+        <li onclick="toggleMobileMenu(this)"><a href="#partners">Partners</a></li>
         <li onclick="toggleMobileMenu(this)"><a href="#">Contact Us</a></li>
         <li></li><li></li>
         <li id="login" onclick="toggleMobileMenu(this)"><a href="#" >Login</a></li>
