Added some animations

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -38,15 +38,15 @@
     <br>
     <div [fxLayout]="(isHandset$ | async) ? 'column' : 'row'" fxLayoutGap="30px" class="mtop-30">
       <div fxFlex="5"></div>
-      <div fxFlex class="solution-card">
+      <div fxFlex class="solution-card" data-aos="fade-up" data-aos-duration="500">
         <img src="../../assets/images/x-ray.png" />
         <p class="lighter-text">A wide range of DICOM modalities can be viewed in a web based cross-platform DICOM viewer that can be accessed on any devices with a web browser and an internet connection.</p>
       </div>
-      <div fxFlex class="solution-card">
+      <div fxFlex class="solution-card" data-aos="fade-up" data-aos-duration="1000">
         <img src="../../assets/images/report.png" />
         <p class="lighter-text">In-workflow reporting allows medical imaging specialists to create and submit report using a single platform.</p>
       </div>
-      <div fxFlex class="solution-card">
+      <div fxFlex class="solution-card" data-aos="fade-up" data-aos-duration="1500">
         <img src="../../assets/images/cloud-data.png" />
         <p class="lighter-text">Being a cloud-based system, Insightiv Diagnostics Platform allows clinic owners to focus on patient care rather than technical issues. We take care of the platform maintenance, upgrades and deployments.</p>
       </div>
@@ -76,7 +76,7 @@
         </p>
       </div>
 
-      <div fxFlex="65" class="supported-modalities-image-wrapper">
+      <div fxFlex="65" class="supported-modalities-image-wrapper" data-aos="fade-right" data-aos-duration="1500">
         <!-- <img src="../../assets/images/ct_viewer.png" /> -->
       </div>
     </div>
@@ -92,7 +92,7 @@
       <div fxFlex="50">
         <img src="../../assets/images/diagnostics_regions_on_map_2.png"/>
       </div>
-      <div fxFlex="50" class="reach-section-desc">
+      <div fxFlex="50" class="reach-section-desc" data-aos="zoom-up" data-aos-duration="1500">
         <p class="larger-text bolder-text center-text">
           Insightiv Diagnostics Platform is designed to be deployable in any cloud or on-premises environment.
         </p>
