--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #17a2b8;
+    background-color: rgba($color: #000000, $alpha: 1);
     padding-top: 30px;
     padding-bottom: 3px;
     padding-left: 100px;
