--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -58,6 +58,7 @@
     box-shadow: 0 6px 10px 0 rgba(0,0,0,0.5);
     transition: 0.3s;
     padding: 30px;
+    z-index: 1;
 }
 
 .supported-modalities-image-wrapper {
@@ -69,6 +70,7 @@
     background-size: cover;
     box-shadow: 0 4px 10px 0 rgba(0,0,0,0.5);
     transition: 0.3s;
+    z-index: 0;
 }
 
 .supported-modalities-image-wrapper img {
