--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -13,7 +13,7 @@
 
 @media only screen and (max-width: 600px) {
     .footer {
-        background-color: #17a2b8;
+        background-color: rgba($color: #000000, $alpha: 1);
         padding-top: 30px;
         padding-bottom: 3px;
         padding-left: 10px;
