--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -124,6 +124,32 @@
     border-radius: 15px;
 }
 
+.feedback-btn-wrapper {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+
+.feedback-card-wrapper {
+    position:fixed;
+    right: 0;
+    bottom: 0;
+    margin-right: 20px;
+    margin-bottom: 96px;
+    width: 400px;
+    z-index: 999;
+}
+
+.feedback-desc {
+    background-color: #17a2b8;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+    color: #fff;
+}
+
 @media only screen and (max-width: 600px) {
 
     .welcome-section {
@@ -148,6 +174,10 @@
         border-top-right-radius: 80% 180px !important;
         position: relative;
         overflow: hidden;
+    }
+
+    .feedback-card-wrapper {
+        width: 350px;
     }
 
 }
