--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,13 @@
 
 /* You can add global styles to this file, and also import other style files */
+// @import '~ngx-owl-carousel-o/lib/styles/scss/owl.carousel.scss';
+// @import '~ngx-owl-carousel-o/lib/styles/scss/owl.theme.default.scss';
+
+@import '/node_modules/ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
+@import '/node_modules/ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
 
 html, body { height: 100%; scroll-behavior: smooth; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Poppins, "Helvetica Neue", sans-serif; }
 
 /* Links */
 a:link {
